--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n^2)$**  \n",
+    "**空間複雜度: $O(1)$**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,34 +30,45 @@
    "source": [
     "class Solution:\n",
     "    def longestPalindrome(self, s: str) -> str:\n",
-    "        res = s[0]\n",
-    "        n = len(s)\n",
-    "        for i in range(n):\n",
-    "            print(f\"{'-'*100}\\ni = {i}\")\n",
-    "            \n",
-    "            print(\"\\n<< even >>\") # \"aa\"\n",
-    "            even = self.find(s, n, left = i, right = i+1)\n",
-    "            print(\"\\n<< odd >>\") # \"aba\"\n",
-    "            odd = self.find(s, n, left = i, right = i+2)\n",
+    "        # 用來記錄目前找到最長迴文的起始索引\n",
+    "        result_index = 0\n",
+    "        # 用來記錄目前找到最長迴文的長度\n",
+    "        result_len = 0\n",
     "\n",
-    "            print(f\"\\nres = {res}, even = {even}, odd = {odd}\")\n",
-    "            if len(even) > len(res):\n",
-    "                res = even\n",
-    "            if len(odd) > len(res):\n",
-    "                res = odd\n",
-    "            print(f\"new: res = {res}\")\n",
-    "        \n",
-    "        return res\n",
-    "        \n",
-    "\n",
-    "    def find(self, s, n, left, right):\n",
-    "        while (left >= 0) and (right < n) and (s[left] == s[right]):\n",
-    "            print(f\"((left={left}) >= 0) and  ((right={right}) < (n={n})) and ((s[left]=s[{left}]={s[left]}) == (s[right]=s[{right}]={s[right]}))\")\n",
-    "            left -= 1\n",
-    "            right += 1\n",
-    "            print(f\"s[left+1:right] = s[{left}+1:{right}] = s[{left+1}:{right}] = {s[left+1:right]}\")\n",
+    "        # 遍歷字串中的每一個字元，將其作為中心點\n",
+    "        for i in range(len(s)): # time: O(n^2)\n",
     "            \n",
-    "        return s[left+1:right]"
+    "            # --- 情況一：奇數長度迴文 (以 s[i] 為中心，如 \"aba\") ---\n",
+    "            left = i\n",
+    "            right = i\n",
+    "            # 只要沒有越界，且左右兩邊的字元相同，就繼續擴散\n",
+    "            while left >= 0 and right < len(s) and s[left] == s[right]: # time: O(n)\n",
+    "                # 計算當前迴文長度\n",
+    "                current_len = right - left + 1\n",
+    "                # 如果當前長度大於之前紀錄的最長長度，則更新紀錄\n",
+    "                if current_len > result_len:\n",
+    "                    result_len = current_len\n",
+    "                    result_index = left\n",
+    "\n",
+    "                # 向左右擴散\n",
+    "                left -= 1\n",
+    "                right += 1\n",
+    "\n",
+    "            # --- 情況二：偶數長度迴文 (以 s[i] 與 s[i+1] 之間為中心，如 \"abba\") ---\n",
+    "            left = i\n",
+    "            right = i + 1\n",
+    "            # 同樣邏輯：只要沒有越界且字元相同，就繼續擴散\n",
+    "            while left >= 0 and right < len(s) and s[left] == s[right]: # time: O(n)\n",
+    "                current_len = right - left + 1\n",
+    "                if current_len > result_len:\n",
+    "                    result_len = current_len\n",
+    "                    result_index = left\n",
+    "\n",
+    "                left -= 1\n",
+    "                right += 1\n",
+    "\n",
+    "        # 根據起始位置和長度，切片回傳最長迴文子字串\n",
+    "        return s[result_index: result_index + result_len]"
    ]
   },
   {
@@ -57,85 +76,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 0\n",
-      "\n",
-      "<< even >>\n",
-      "((left=0) >= 0) and  ((right=1) < (n=7)) and ((s[left]=s[0]=b) == (s[right]=s[1]=b))\n",
-      "s[left+1:right] = s[-1+1:2] = s[0:2] = bb\n",
-      "\n",
-      "<< odd >>\n",
-      "\n",
-      "res = b, even = bb, odd = b\n",
-      "new: res = bb\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 1\n",
-      "\n",
-      "<< even >>\n",
-      "\n",
-      "<< odd >>\n",
-      "\n",
-      "res = bb, even = , odd = c\n",
-      "new: res = bb\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 2\n",
-      "\n",
-      "<< even >>\n",
-      "((left=2) >= 0) and  ((right=3) < (n=7)) and ((s[left]=s[2]=c) == (s[right]=s[3]=c))\n",
-      "s[left+1:right] = s[1+1:4] = s[2:4] = cc\n",
-      "\n",
-      "<< odd >>\n",
-      "((left=2) >= 0) and  ((right=4) < (n=7)) and ((s[left]=s[2]=c) == (s[right]=s[4]=c))\n",
-      "s[left+1:right] = s[1+1:5] = s[2:5] = ccc\n",
-      "((left=1) >= 0) and  ((right=5) < (n=7)) and ((s[left]=s[1]=b) == (s[right]=s[5]=b))\n",
-      "s[left+1:right] = s[0+1:6] = s[1:6] = bcccb\n",
-      "\n",
-      "res = bb, even = cc, odd = bcccb\n",
-      "new: res = bcccb\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 3\n",
-      "\n",
-      "<< even >>\n",
-      "((left=3) >= 0) and  ((right=4) < (n=7)) and ((s[left]=s[3]=c) == (s[right]=s[4]=c))\n",
-      "s[left+1:right] = s[2+1:5] = s[3:5] = cc\n",
-      "\n",
-      "<< odd >>\n",
-      "\n",
-      "res = bcccb, even = cc, odd = c\n",
-      "new: res = bcccb\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 4\n",
-      "\n",
-      "<< even >>\n",
-      "\n",
-      "<< odd >>\n",
-      "\n",
-      "res = bcccb, even = , odd = b\n",
-      "new: res = bcccb\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 5\n",
-      "\n",
-      "<< even >>\n",
-      "\n",
-      "<< odd >>\n",
-      "\n",
-      "res = bcccb, even = , odd = a\n",
-      "new: res = bcccb\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "i = 6\n",
-      "\n",
-      "<< even >>\n",
-      "\n",
-      "<< odd >>\n",
-      "\n",
-      "res = bcccb, even = , odd = \n",
-      "new: res = bcccb\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -158,130 +98,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 動態規劃\n",
-    "https://clay-atlas.com/blog/2021/01/03/leetcode-cn-5-longest-palindromic-substring/"
+    "#### 動態規劃"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def longestPalindrome(self, s: str) -> str:\n",
-    "        import numpy as np\n",
-    "        n = len(s)\n",
-    "        dp = [[False] * n for _ in range(n)]\n",
-    "        for i in range(n):\n",
-    "            dp[i][i] = True # 單一字一定是回文，對角線為True\n",
-    "        print(f\"orginal: dp = \\n{np.array(dp)}\")\n",
-    "\n",
-    "        res = s[0]\n",
-    "        for i in range(n-2, -1, -1):\n",
-    "            for j in range(i+1, n):\n",
-    "                print(f\"\\ni = {i}, j = {j}\")\n",
-    "                if (s[i] == s[j]):\n",
-    "                    if ((j - i) == 1) or (dp[i+1][j-1]):\n",
-    "                        # (j - i) == 1, ex: \"aa\", \"cc\", 間隔為1，前後相同的字一定為回文\n",
-    "                        # dp[i+1][j-1],ex: \"aba\", \"cdc\"\n",
-    "                        print(f\"( (s[i] = {s[i]}) == (s[j] = {s[j]}) ) and ( ((j - i = {j - i}) == 1) or (dp[i+1][j-1] = {dp[i+1][j-1]}) )\")\n",
-    "                        dp[i][j] = True\n",
-    "                        print(f\"new: dp = \\n{np.array(dp)}\")\n",
-    "\n",
-    "                        if (j - i + 1) > len(res):\n",
-    "                            res = s[i : j+1]\n",
-    "\n",
-    "                        print(f\"(j - i + 1) = {j - i + 1}, res = {res}\")\n",
-    "                    else:\n",
-    "                        print(f\"only - (s[i] = {s[i]}) == (s[j] = {s[j]})\")\n",
-    "                else:\n",
-    "                    print(f\"(s[i] = {s[i]}) != (s[j] = {s[j]})\")\n",
-    "        \n",
-    "        return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "orginal: dp = \n",
-      "[[ True False False False False]\n",
-      " [False  True False False False]\n",
-      " [False False  True False False]\n",
-      " [False False False  True False]\n",
-      " [False False False False  True]]\n",
-      "\n",
-      "i = 3, j = 4\n",
-      "(s[i] = a) != (s[j] = d)\n",
-      "\n",
-      "i = 2, j = 3\n",
-      "(s[i] = b) != (s[j] = a)\n",
-      "\n",
-      "i = 2, j = 4\n",
-      "(s[i] = b) != (s[j] = d)\n",
-      "\n",
-      "i = 1, j = 2\n",
-      "(s[i] = a) != (s[j] = b)\n",
-      "\n",
-      "i = 1, j = 3\n",
-      "( (s[i] = a) == (s[j] = a) ) and ( ((j - i = 2) == 1) or (dp[i+1][j-1] = True) )\n",
-      "new: dp = \n",
-      "[[ True False False False False]\n",
-      " [False  True False  True False]\n",
-      " [False False  True False False]\n",
-      " [False False False  True False]\n",
-      " [False False False False  True]]\n",
-      "(j - i + 1) = 3, res = aba\n",
-      "\n",
-      "i = 1, j = 4\n",
-      "(s[i] = a) != (s[j] = d)\n",
-      "\n",
-      "i = 0, j = 1\n",
-      "(s[i] = b) != (s[j] = a)\n",
-      "\n",
-      "i = 0, j = 2\n",
-      "( (s[i] = b) == (s[j] = b) ) and ( ((j - i = 2) == 1) or (dp[i+1][j-1] = True) )\n",
-      "new: dp = \n",
-      "[[ True False  True False False]\n",
-      " [False  True False  True False]\n",
-      " [False False  True False False]\n",
-      " [False False False  True False]\n",
-      " [False False False False  True]]\n",
-      "(j - i + 1) = 3, res = aba\n",
-      "\n",
-      "i = 0, j = 3\n",
-      "(s[i] = b) != (s[j] = a)\n",
-      "\n",
-      "i = 0, j = 4\n",
-      "(s[i] = b) != (s[j] = d)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'aba'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = \"babad\"\n",
-    "Solution().longestPalindrome(s)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -295,14 +123,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6a07fcf0145f94b3f971c13d061528107de20ab7b779375f96dab9bbac6a85db"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
