--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -104,7 +104,74 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**時間複雜度: $O(n^2)$**  \n",
+    "**空間複雜度: $O(n^2)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        # 用來記錄目前找到最長迴文的起始索引\n",
+    "        result_index = 0\n",
+    "        # 用來記錄目前找到最長迴文的長度\n",
+    "        result_len = 0\n",
+    "        \n",
+    "        n = len(s)\n",
+    "\n",
+    "        # 建立 n x n 的 DP 表格。dp[i][j] 儲存 s[i...j] 是否為迴文\n",
+    "        dp = [[False] * n for _ in range(n)]  # space: O(n^2)\n",
+    "        \n",
+    "        # 外層迴圈：i 從字串尾部 (n-1) 倒數到開頭 (0)。\n",
+    "        # 這是為了確保在計算 dp[i][j] 時，左下角所需的 dp[i+1][j-1] 已被計算。\n",
+    "        for i in range(n-1, -1, -1):  # time: O(n^2)\n",
+    "            # 內層迴圈：j 從 i 開始往後遍歷 (j 必須 >= i)\n",
+    "            for j in range(i, n):  # time: O(n)\n",
+    "                \n",
+    "                # 核心狀態轉移：\n",
+    "                # 1. 兩端字元相等 (s[i] == s[j])\n",
+    "                # 2. 且滿足以下任一條件：\n",
+    "                #    a. 字串長度 L = (j - i + 1) 小於等於 3 (L <= 3) , ex: \"a\", \"aa\", \"aba\"\n",
+    "                #    b. 或內部子字串 dp[i+1][j-1] 已經是迴文\n",
+    "                if s[i] == s[j] and ((j - i + 1) <= 3 or dp[i+1][j-1]): \n",
+    "                    # 滿足條件，確認 s[i...j] 是迴文\n",
+    "                    dp[i][j] = True\n",
+    "\n",
+    "                    # 檢查並更新最長迴文的紀錄\n",
+    "                    if (j - i + 1) > result_len:\n",
+    "                        result_len = j - i + 1\n",
+    "                        result_index = i\n",
+    "\n",
+    "        # 根據起始位置和長度，切片回傳最長迴文子字串\n",
+    "        return s[result_index: result_index + result_len]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bcccb'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"ccc\"\n",
+    "s = \"bbcccba\"\n",
+    "Solution().longestPalindrome(s)"
+   ]
   }
  ],
  "metadata": {
