--- a/647. Palindromic Substrings.ipynb
+++ b/647. Palindromic Substrings.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 雙指針"
+    "#### Two Pointers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n^2)$**  \n",
+    "**空間複雜度: $O(1)$**"
    ]
   },
   {
@@ -24,7 +32,7 @@
     "    def countSubstrings(self, s: str) -> int:\n",
     "        n = len(s)\n",
     "        res = n\n",
-    "        for i in range(n):\n",
+    "        for i in range(n): # time: O(n^2)\n",
     "            print(f\"{'-'*100}\\ni = {i}\")\n",
     "            \n",
     "            print(\"\\n<< even >>\") # \"aa\"\n",
@@ -42,7 +50,7 @@
     "\n",
     "    def find(self, s, n, left, right):\n",
     "        count = 0\n",
-    "        while (left >= 0) and (right < n) and (s[left] == s[right]):\n",
+    "        while (left >= 0) and (right < n) and (s[left] == s[right]): # time: O(n)\n",
     "            print(f\"((left={left}) >= 0) and  ((right={right}) < (n={n})) and ((s[left]=s[{left}]={s[left]}) == (s[right]=s[{right}]={s[right]}))\")\n",
     "            left -= 1\n",
     "            right += 1\n",
@@ -116,7 +124,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 動態規劃"
+    "#### Two Pointers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n^2)$**  \n",
+    "**空間複雜度: $O(1)$**"
    ]
   },
   {
@@ -127,35 +143,29 @@
    "source": [
     "class Solution:\n",
     "    def countSubstrings(self, s: str) -> int:\n",
-    "        import numpy as np\n",
+    "        result = 0  # 初始化計數器，用來儲存找到的迴文子字串總數\n",
     "\n",
-    "        n = len(s)\n",
-    "        dp = [[0] * n for _ in range(n)]\n",
-    "        for i in range(n):\n",
-    "            dp[i][i] = 1 # 單一字一定是回文，對角線為True\n",
-    "        print(f\"orginal: dp = \\n{np.array(dp)}\")\n",
+    "        for i in range(len(s)):  # 遍歷字串的每個位置，將其視為潛在的迴文中心 # time: O(n^2)\n",
+    "            # 情況一：處理奇數長度的迴文 (如 \"aba\")\n",
+    "            left = i  # 設定左指針從當前字元開始\n",
+    "            right = i  # 設定右指針從當前字元開始\n",
+    "            while left >= 0 and right < len(s) and s[left] == s[right]: # time: O(n)\n",
+    "                result += 1  # 只要左右相等，就是一個新的迴文，總數加 1\n",
     "\n",
-    "        count = n\n",
-    "        for i in range(n-2, -1, -1):\n",
-    "            for j in range(i+1, n):\n",
-    "                print(f\"\\ni = {i}, j = {j}\")\n",
-    "                if (s[i] == s[j]):\n",
-    "                    if ((j - i) == 1) or (dp[i+1][j-1]):\n",
-    "                        # (j - i) == 1, ex: \"aa\", \"cc\", 間隔為1，前後相同的字一定為回文\n",
-    "                        # dp[i+1][j-1],ex: \"aba\", \"cdc\"\n",
-    "                        print(f\"( (s[i] = {s[i]}) == (s[j] = {s[j]}) ) and ( ((j - i = {j - i}) == 1) or (dp[i+1][j-1] = {dp[i+1][j-1]}) )\")\n",
-    "                        dp[i][j] = 1\n",
-    "                        print(f\"new: dp = \\n{np.array(dp)}\")\n",
-    "                    else:\n",
-    "                        print(f\"only - ( (s[i] = {s[i]}) == (s[j] = {s[j]})\")\n",
-    "                else:\n",
-    "                    print(f\"(s[i] = {s[i]}) != (s[j] = {s[j]})\")\n",
-    "                \n",
-    "                if dp[i][j]:\n",
-    "                    count += 1\n",
-    "                    print(f\"count = {count}\")\n",
-    "                    \n",
-    "        return count"
+    "                # 向左右擴散\n",
+    "                left -= 1\n",
+    "                right += 1\n",
+    "\n",
+    "            # 情況二：處理偶數長度的迴文 (如 \"abba\")\n",
+    "            left = i      # 左指針指向當前字元\n",
+    "            right = i + 1  # 右指針指向下一個字元\n",
+    "            while left >= 0 and right < len(s) and s[left] == s[right]: # time: O(n)\n",
+    "                result += 1  # 只要左右相等，就是一個新的迴文，總數加 1\n",
+    "\n",
+    "                # 向左右擴散\n",
+    "                left -= 1\n",
+    "                right += 1\n",
+    "        return result  # 回傳最終統計的迴文總數"
    ]
   },
   {
@@ -163,40 +173,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "orginal: dp = \n",
-      "[[1 0 0]\n",
-      " [0 1 0]\n",
-      " [0 0 1]]\n",
-      "\n",
-      "i = 1, j = 2\n",
-      "( (s[i] = a) == (s[j] = a) ) and ( ((j - i = 1) == 1) or (dp[i+1][j-1] = 0) )\n",
-      "new: dp = \n",
-      "[[1 0 0]\n",
-      " [0 1 1]\n",
-      " [0 0 1]]\n",
-      "count = 4\n",
-      "\n",
-      "i = 0, j = 1\n",
-      "( (s[i] = a) == (s[j] = a) ) and ( ((j - i = 1) == 1) or (dp[i+1][j-1] = 0) )\n",
-      "new: dp = \n",
-      "[[1 1 0]\n",
-      " [0 1 1]\n",
-      " [0 0 1]]\n",
-      "count = 5\n",
-      "\n",
-      "i = 0, j = 2\n",
-      "( (s[i] = a) == (s[j] = a) ) and ( ((j - i = 2) == 1) or (dp[i+1][j-1] = 1) )\n",
-      "new: dp = \n",
-      "[[1 1 1]\n",
-      " [0 1 1]\n",
-      " [0 0 1]]\n",
-      "count = 6\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -212,11 +188,80 @@
     "s = \"aaa\"\n",
     "Solution().countSubstrings(s)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 動態規劃"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n^2)$**  \n",
+    "**空間複雜度: $O(n^2)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countSubstrings(self, s: str) -> str:\n",
+    "        result = 0\n",
+    "        n = len(s)\n",
+    "\n",
+    "        # 建立 n x n 的 DP 表格。dp[i][j] 儲存 s[i...j] 是否為迴文\n",
+    "        dp = [[False] * n for _ in range(n)]  # space: O(n^2)\n",
+    "        \n",
+    "        # 外層迴圈：i 從字串尾部 (n-1) 倒數到開頭 (0)。\n",
+    "        # 這是為了確保在計算 dp[i][j] 時，左下角所需的 dp[i+1][j-1] 已被計算。\n",
+    "        for i in range(n-1, -1, -1):  # time: O(n^2)\n",
+    "            # 內層迴圈：j 從 i 開始往後遍歷 (j 必須 >= i)\n",
+    "            for j in range(i, n):  # time: O(n)\n",
+    "                \n",
+    "                # 核心狀態轉移：\n",
+    "                # 1. 兩端字元相等 (s[i] == s[j])\n",
+    "                # 2. 且滿足以下任一條件：\n",
+    "                #    a. 字串長度 L = (j - i + 1) 小於等於 3 (L <= 3) , ex: \"a\", \"aa\", \"aba\"\n",
+    "                #    b. 或內部子字串 dp[i+1][j-1] 已經是迴文\n",
+    "                if s[i] == s[j] and ((j - i + 1) <= 3 or dp[i+1][j-1]): \n",
+    "                    # 滿足條件，確認 s[i...j] 是迴文\n",
+    "                    dp[i][j] = True\n",
+    "                    result += 1 # 總數加 1\n",
+    "\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"aaa\"\n",
+    "Solution().countSubstrings(s)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -230,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
