--- a/647. Palindromic Substrings.ipynb
+++ b/647. Palindromic Substrings.ipynb
@@ -11,6 +11,280 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Manacher's Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n^2)$**  \n",
+    "**空間複雜度: $O(1)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countSubstrings(self, s: str) -> int:\n",
+    "        transform_s = \"#\" + \"#\".join(s) + \"#\"\n",
+    "        print(f\"{s = }\")\n",
+    "        print(f\"{transform_s = }\")\n",
+    "\n",
+    "        n = len(transform_s)\n",
+    "        palindromic_radius = [0] * n\n",
+    "        left = 0\n",
+    "        right = 0\n",
+    "        print(f\"{left = }, {right = }, {palindromic_radius = }\")\n",
+    "\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            print(\"=\" * 50)\n",
+    "            print(f\"{i = }\")\n",
+    "            print(f\"{right - i = }, palindromic_radius[left({left} )+ (right({right}) - i{i})] = palindromic_radius[{left + (right - i)}] = {palindromic_radius[left + (right - i)]}\")\n",
+    "            \n",
+    "            palindromic_radius[i] = min(right - i, palindromic_radius[left + (right - i)]) if i < right else 0\n",
+    "            print(f\"{palindromic_radius[i] = }\")\n",
+    "            \n",
+    "\n",
+    "            while (\n",
+    "                i - palindromic_radius[i] - 1 >= 0 and # 下一個不確定的左字元\n",
+    "                i + palindromic_radius[i] + 1 < n and # 下一個不確定的右字元\n",
+    "                transform_s[i - palindromic_radius[i] - 1] == transform_s[i + palindromic_radius[i] + 1] \n",
+    "            ):\n",
+    "                print(f\"sub_left({i - palindromic_radius[i] - 1}) >= 0 and sub_right({i + palindromic_radius[i] + 1}) < n({n}) and {transform_s[i - palindromic_radius[i] - 1]} == {transform_s[i + palindromic_radius[i] + 1]}\")\n",
+    "                palindromic_radius[i] += 1\n",
+    "                print(f\"-> {i = }, {palindromic_radius[i] = }\")\n",
+    "\n",
+    "            if i + palindromic_radius[i] > right:\n",
+    "                left = i - palindromic_radius[i]\n",
+    "                right = i + palindromic_radius[i]\n",
+    "            \n",
+    "            print(f\"{left = }, {right = }, {palindromic_radius = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s = 'xyzabakCkabawuv'\n",
+      "transform_s = '#x#y#z#a#b#a#k#C#k#a#b#a#w#u#v#'\n",
+      "left = 0, right = 0, palindromic_radius = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 0\n",
+      "right - i = 0, palindromic_radius[left(0 )+ (right(0) - i0)] = palindromic_radius[0] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 0, palindromic_radius = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 1\n",
+      "right - i = -1, palindromic_radius[left(0 )+ (right(0) - i1)] = palindromic_radius[-1] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(0) >= 0 and sub_right(2) < n(31) and # == #\n",
+      "-> i = 1, palindromic_radius[i] = 1\n",
+      "left = 0, right = 2, palindromic_radius = [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 2\n",
+      "right - i = 0, palindromic_radius[left(0 )+ (right(2) - i2)] = palindromic_radius[0] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 2, palindromic_radius = [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 3\n",
+      "right - i = -1, palindromic_radius[left(0 )+ (right(2) - i3)] = palindromic_radius[-1] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(2) >= 0 and sub_right(4) < n(31) and # == #\n",
+      "-> i = 3, palindromic_radius[i] = 1\n",
+      "left = 2, right = 4, palindromic_radius = [0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 4\n",
+      "right - i = 0, palindromic_radius[left(2 )+ (right(4) - i4)] = palindromic_radius[2] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 2, right = 4, palindromic_radius = [0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 5\n",
+      "right - i = -1, palindromic_radius[left(2 )+ (right(4) - i5)] = palindromic_radius[1] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(4) >= 0 and sub_right(6) < n(31) and # == #\n",
+      "-> i = 5, palindromic_radius[i] = 1\n",
+      "left = 4, right = 6, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 6\n",
+      "right - i = 0, palindromic_radius[left(4 )+ (right(6) - i6)] = palindromic_radius[4] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 6, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 7\n",
+      "right - i = -1, palindromic_radius[left(4 )+ (right(6) - i7)] = palindromic_radius[3] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(6) >= 0 and sub_right(8) < n(31) and # == #\n",
+      "-> i = 7, palindromic_radius[i] = 1\n",
+      "left = 6, right = 8, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 8\n",
+      "right - i = 0, palindromic_radius[left(6 )+ (right(8) - i8)] = palindromic_radius[6] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 8, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 9\n",
+      "right - i = -1, palindromic_radius[left(6 )+ (right(8) - i9)] = palindromic_radius[5] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(8) >= 0 and sub_right(10) < n(31) and # == #\n",
+      "-> i = 9, palindromic_radius[i] = 1\n",
+      "sub_left(7) >= 0 and sub_right(11) < n(31) and a == a\n",
+      "-> i = 9, palindromic_radius[i] = 2\n",
+      "sub_left(6) >= 0 and sub_right(12) < n(31) and # == #\n",
+      "-> i = 9, palindromic_radius[i] = 3\n",
+      "left = 6, right = 12, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 10\n",
+      "right - i = 2, palindromic_radius[left(6 )+ (right(12) - i10)] = palindromic_radius[8] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 12, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 11\n",
+      "right - i = 1, palindromic_radius[left(6 )+ (right(12) - i11)] = palindromic_radius[7] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 6, right = 12, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 12\n",
+      "right - i = 0, palindromic_radius[left(6 )+ (right(12) - i12)] = palindromic_radius[6] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 12, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 13\n",
+      "right - i = -1, palindromic_radius[left(6 )+ (right(12) - i13)] = palindromic_radius[5] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(12) >= 0 and sub_right(14) < n(31) and # == #\n",
+      "-> i = 13, palindromic_radius[i] = 1\n",
+      "left = 12, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 14\n",
+      "right - i = 0, palindromic_radius[left(12 )+ (right(14) - i14)] = palindromic_radius[12] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 12, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 15\n",
+      "right - i = -1, palindromic_radius[left(12 )+ (right(14) - i15)] = palindromic_radius[11] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(14) >= 0 and sub_right(16) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 1\n",
+      "sub_left(13) >= 0 and sub_right(17) < n(31) and k == k\n",
+      "-> i = 15, palindromic_radius[i] = 2\n",
+      "sub_left(12) >= 0 and sub_right(18) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 3\n",
+      "sub_left(11) >= 0 and sub_right(19) < n(31) and a == a\n",
+      "-> i = 15, palindromic_radius[i] = 4\n",
+      "sub_left(10) >= 0 and sub_right(20) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 5\n",
+      "sub_left(9) >= 0 and sub_right(21) < n(31) and b == b\n",
+      "-> i = 15, palindromic_radius[i] = 6\n",
+      "sub_left(8) >= 0 and sub_right(22) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 7\n",
+      "sub_left(7) >= 0 and sub_right(23) < n(31) and a == a\n",
+      "-> i = 15, palindromic_radius[i] = 8\n",
+      "sub_left(6) >= 0 and sub_right(24) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 9\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 16\n",
+      "right - i = 8, palindromic_radius[left(6 )+ (right(24) - i16)] = palindromic_radius[14] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 17\n",
+      "right - i = 7, palindromic_radius[left(6 )+ (right(24) - i17)] = palindromic_radius[13] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 18\n",
+      "right - i = 6, palindromic_radius[left(6 )+ (right(24) - i18)] = palindromic_radius[12] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 19\n",
+      "right - i = 5, palindromic_radius[left(6 )+ (right(24) - i19)] = palindromic_radius[11] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 20\n",
+      "right - i = 4, palindromic_radius[left(6 )+ (right(24) - i20)] = palindromic_radius[10] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 21\n",
+      "right - i = 3, palindromic_radius[left(6 )+ (right(24) - i21)] = palindromic_radius[9] = 3\n",
+      "palindromic_radius[i] = 3\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 22\n",
+      "right - i = 2, palindromic_radius[left(6 )+ (right(24) - i22)] = palindromic_radius[8] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 23\n",
+      "right - i = 1, palindromic_radius[left(6 )+ (right(24) - i23)] = palindromic_radius[7] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 24\n",
+      "right - i = 0, palindromic_radius[left(6 )+ (right(24) - i24)] = palindromic_radius[6] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 6, right = 24, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 25\n",
+      "right - i = -1, palindromic_radius[left(6 )+ (right(24) - i25)] = palindromic_radius[5] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(24) >= 0 and sub_right(26) < n(31) and # == #\n",
+      "-> i = 25, palindromic_radius[i] = 1\n",
+      "left = 24, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 26\n",
+      "right - i = 0, palindromic_radius[left(24 )+ (right(26) - i26)] = palindromic_radius[24] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 24, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 27\n",
+      "right - i = -1, palindromic_radius[left(24 )+ (right(26) - i27)] = palindromic_radius[23] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(26) >= 0 and sub_right(28) < n(31) and # == #\n",
+      "-> i = 27, palindromic_radius[i] = 1\n",
+      "left = 26, right = 28, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 1, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 28\n",
+      "right - i = 0, palindromic_radius[left(26 )+ (right(28) - i28)] = palindromic_radius[26] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 26, right = 28, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 1, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 29\n",
+      "right - i = -1, palindromic_radius[left(26 )+ (right(28) - i29)] = palindromic_radius[25] = 1\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(28) >= 0 and sub_right(30) < n(31) and # == #\n",
+      "-> i = 29, palindromic_radius[i] = 1\n",
+      "left = 28, right = 30, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
+      "==================================================\n",
+      "i = 30\n",
+      "right - i = 0, palindromic_radius[left(28 )+ (right(30) - i30)] = palindromic_radius[28] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 28, right = 30, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 9, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"xyzabakCkabawuv\"\n",
+    "Solution().countSubstrings(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Two Pointers"
    ]
   },
@@ -24,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +384,7 @@
        "6"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +453,7 @@
        "6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +522,7 @@
        "6"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
