--- a/647. Palindromic Substrings.ipynb
+++ b/647. Palindromic Substrings.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,12 @@
     "        for i in range(n):\n",
     "            print(\"=\" * 50)\n",
     "            print(f\"{i = }\")\n",
-    "            print(f\"{right - i = }, palindromic_radius[left({left} )+ (right({right}) - i{i})] = palindromic_radius[{left + (right - i)}] = {palindromic_radius[left + (right - i)]}\")\n",
     "            \n",
-    "            palindromic_radius[i] = min(right - i, palindromic_radius[left + (right - i)]) if i < right else 0\n",
+    "            # 回文中心點 center = (left + right) / 2\n",
+    "            # 左側(center - j) == 右側(i - center), j 為 i 的左側鏡像點\n",
+    "            # j = 2 * center - i = 2 * ((left + right) / 2) - i = left + right - i\n",
+    "            palindromic_radius[i] = min(right - i, palindromic_radius[left + right - i]) if i < right else 0\n",
+    "            print(f\"{right - i = }, palindromic_radius[left({left} )+ (right({right}) - i{i})] = palindromic_radius[{left + (right - i)}] = {palindromic_radius[left + (right - i)]}\")\n",
     "            print(f\"{palindromic_radius[i] = }\")\n",
     "            \n",
     "\n",
