--- a/647. Palindromic Substrings.ipynb
+++ b/647. Palindromic Substrings.ipynb
@@ -18,13 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**時間複雜度: $O(n^2)$**  \n",
-    "**空間複雜度: $O(1)$**"
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(n)$**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "        print(f\"{transform_s = }\")\n",
     "\n",
     "        n = len(transform_s)\n",
-    "        palindromic_radius = [0] * n # palindromic_radius[i] 儲存以 i 為中心的最長迴文半徑（不含 i 本身）\n",
+    "        palindromic_radius = [0] * n # palindromic_radius[i] 儲存以 i 為中心的最長迴文半徑（不含 i 本身）# space: O(n)\n",
     "\n",
     "        # 維護目前已知的「最右迴文邊界」及其對應的範圍\n",
     "        left = 0\n",
@@ -45,7 +45,7 @@
     "        print(f\"{left = }, {right = }, {palindromic_radius = }\")\n",
     "\n",
     "\n",
-    "        for i in range(n):\n",
+    "        for i in range(n): # time: O(n)，利用對稱性跳過重複計算，確保 while 迴圈對 right 邊界的更新總計不超過 n 次。\n",
     "            print(\"=\" * 50)\n",
     "            print(f\"{i = }, {transform_s[i] = }\")\n",
     "            \n",
