--- a/5. Longest Palindromic Substring.ipynb
+++ b/5. Longest Palindromic Substring.ipynb
@@ -11,6 +11,306 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Manacher's Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(n)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        # 預處理：在字元間插入 '#'，將所有情況（奇偶長度）統一轉為奇數長度\n",
+    "        # 例如 \"aba\" -> \"#a#b#a#\", \"aa\" -> \"#a#a#\"\n",
+    "        transform_s = \"#\" + \"#\".join(s) + \"#\"\n",
+    "        print(f\"{s = }\")\n",
+    "        print(f\"{transform_s = }\")\n",
+    "\n",
+    "        n = len(transform_s)\n",
+    "        palindromic_radius = [0] * n # palindromic_radius[i] 儲存以 i 為中心的最長迴文半徑（不含 i 本身）# space: O(n)\n",
+    "\n",
+    "        # 維護目前已知的「最右迴文邊界」及其對應的範圍\n",
+    "        left = 0\n",
+    "        right = 0\n",
+    "        print(f\"{left = }, {right = }, {palindromic_radius = }\")\n",
+    "\n",
+    "\n",
+    "        for i in range(n): # time: O(n)，利用對稱性跳過重複計算，確保 while 迴圈對 right 邊界的更新總計不超過 n 次。\n",
+    "            print(\"=\" * 50)\n",
+    "            print(f\"{i = }, {transform_s[i] = }\")\n",
+    "            \n",
+    "            # 如果 i 在 right 的邊界內，代表 i 在迴文範圍內，才能去找 i 的左側鏡像點(j)\n",
+    "            if i < right:\n",
+    "                # a. 迴文中心點 center = (left + right) / 2\n",
+    "                # a. 左側(center - j) == 右側(i - center), j 為 i 的左側鏡像點\n",
+    "                # a. j = 2 * center - i = 2 * ((left + right) / 2) - i = left + right - i\n",
+    "                # b. ex: s = edabadeCedabaff, palindromic_radius[center] = 5 (abadeCedaba)\n",
+    "                # b-1. palindromic_radius[j] = 1 (aba)，左側鏡像點半徑範圍在迴文內，所以右側半徑初始至少有 palindromic_radius[j]\n",
+    "                # b-2. palindromic_radius[j] = 3 (edabade)，左側鏡像點半徑範圍不在迴文內，所以右側半徑初始最多只能有 right - i\n",
+    "                print(f\"{(right - i) = }, palindromic_radius[left({left})+ right({right}) - i({i})] = palindromic_radius[{left + right - i}] = {palindromic_radius[left + right - i]}\")\n",
+    "                palindromic_radius[i] = min(right - i, palindromic_radius[left + right - i])\n",
+    "            else:\n",
+    "                palindromic_radius[i] = 0\n",
+    "            print(f\"{palindromic_radius[i] = }\")\n",
+    "            \n",
+    "\n",
+    "            # 從初始半徑開始，向左右兩側檢查字元是否相同\n",
+    "            while (\n",
+    "                i - palindromic_radius[i] - 1 >= 0 and # 確保下一個不確定的左字元不越界\n",
+    "                i + palindromic_radius[i] + 1 < n and  # 確保下一個不確定的右字元不越界\n",
+    "                transform_s[i - palindromic_radius[i] - 1] == transform_s[i + palindromic_radius[i] + 1] # 左右字元是否相同\n",
+    "            ):\n",
+    "                print(f\"sub_left({i - palindromic_radius[i] - 1}) >= 0 and sub_right({i + palindromic_radius[i] + 1}) < n({n}) and {transform_s[i - palindromic_radius[i] - 1]} == {transform_s[i + palindromic_radius[i] + 1]}\")\n",
+    "                palindromic_radius[i] += 1 # 擴張半徑\n",
+    "                print(f\"-> {i = }, {palindromic_radius[i] = } ({transform_s[i-palindromic_radius[i]:i+palindromic_radius[i]+1]})\")\n",
+    "\n",
+    "            # 如果以 i 為中心的迴文超出了目前的 right 邊界，就更新邊界\n",
+    "            if i + palindromic_radius[i] > right:\n",
+    "                # 更新目前最靠右的回文區間範圍\n",
+    "                left = i - palindromic_radius[i]\n",
+    "                right = i + palindromic_radius[i]\n",
+    "            \n",
+    "            print(f\"{left = }, {right = }, {palindromic_radius = }\")\n",
+    "       \n",
+    "        max_radius, center = max([(radius, idx) for idx, radius in enumerate(palindromic_radius)])\n",
+    "        start = (center - max_radius) // 2 # (center - max_radius) = start, start 再除以 2 以扣掉 # 的部分，但 max_radius 可以保留，直接當成迴文的總長\n",
+    "\n",
+    "        return s[start : start + max_radius]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s = 'edabadeCedabaff'\n",
+      "transform_s = '#e#d#a#b#a#d#e#C#e#d#a#b#a#f#f#'\n",
+      "left = 0, right = 0, palindromic_radius = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 0, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 0, palindromic_radius = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 1, transform_s[i] = 'e'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(0) >= 0 and sub_right(2) < n(31) and # == #\n",
+      "-> i = 1, palindromic_radius[i] = 1 (#e#)\n",
+      "left = 0, right = 2, palindromic_radius = [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 2, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 2, palindromic_radius = [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 3, transform_s[i] = 'd'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(2) >= 0 and sub_right(4) < n(31) and # == #\n",
+      "-> i = 3, palindromic_radius[i] = 1 (#d#)\n",
+      "left = 2, right = 4, palindromic_radius = [0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 4, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 2, right = 4, palindromic_radius = [0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 5, transform_s[i] = 'a'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(4) >= 0 and sub_right(6) < n(31) and # == #\n",
+      "-> i = 5, palindromic_radius[i] = 1 (#a#)\n",
+      "left = 4, right = 6, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 6, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 6, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 7, transform_s[i] = 'b'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(6) >= 0 and sub_right(8) < n(31) and # == #\n",
+      "-> i = 7, palindromic_radius[i] = 1 (#b#)\n",
+      "sub_left(5) >= 0 and sub_right(9) < n(31) and a == a\n",
+      "-> i = 7, palindromic_radius[i] = 2 (a#b#a)\n",
+      "sub_left(4) >= 0 and sub_right(10) < n(31) and # == #\n",
+      "-> i = 7, palindromic_radius[i] = 3 (#a#b#a#)\n",
+      "sub_left(3) >= 0 and sub_right(11) < n(31) and d == d\n",
+      "-> i = 7, palindromic_radius[i] = 4 (d#a#b#a#d)\n",
+      "sub_left(2) >= 0 and sub_right(12) < n(31) and # == #\n",
+      "-> i = 7, palindromic_radius[i] = 5 (#d#a#b#a#d#)\n",
+      "sub_left(1) >= 0 and sub_right(13) < n(31) and e == e\n",
+      "-> i = 7, palindromic_radius[i] = 6 (e#d#a#b#a#d#e)\n",
+      "sub_left(0) >= 0 and sub_right(14) < n(31) and # == #\n",
+      "-> i = 7, palindromic_radius[i] = 7 (#e#d#a#b#a#d#e#)\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 8, transform_s[i] = '#'\n",
+      "(right - i) = 6, palindromic_radius[left(0)+ right(14) - i(8)] = palindromic_radius[6] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 9, transform_s[i] = 'a'\n",
+      "(right - i) = 5, palindromic_radius[left(0)+ right(14) - i(9)] = palindromic_radius[5] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 10, transform_s[i] = '#'\n",
+      "(right - i) = 4, palindromic_radius[left(0)+ right(14) - i(10)] = palindromic_radius[4] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 11, transform_s[i] = 'd'\n",
+      "(right - i) = 3, palindromic_radius[left(0)+ right(14) - i(11)] = palindromic_radius[3] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 12, transform_s[i] = '#'\n",
+      "(right - i) = 2, palindromic_radius[left(0)+ right(14) - i(12)] = palindromic_radius[2] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 13, transform_s[i] = 'e'\n",
+      "(right - i) = 1, palindromic_radius[left(0)+ right(14) - i(13)] = palindromic_radius[1] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 14, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 0, right = 14, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 15, transform_s[i] = 'C'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(14) >= 0 and sub_right(16) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 1 (#C#)\n",
+      "sub_left(13) >= 0 and sub_right(17) < n(31) and e == e\n",
+      "-> i = 15, palindromic_radius[i] = 2 (e#C#e)\n",
+      "sub_left(12) >= 0 and sub_right(18) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 3 (#e#C#e#)\n",
+      "sub_left(11) >= 0 and sub_right(19) < n(31) and d == d\n",
+      "-> i = 15, palindromic_radius[i] = 4 (d#e#C#e#d)\n",
+      "sub_left(10) >= 0 and sub_right(20) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 5 (#d#e#C#e#d#)\n",
+      "sub_left(9) >= 0 and sub_right(21) < n(31) and a == a\n",
+      "-> i = 15, palindromic_radius[i] = 6 (a#d#e#C#e#d#a)\n",
+      "sub_left(8) >= 0 and sub_right(22) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 7 (#a#d#e#C#e#d#a#)\n",
+      "sub_left(7) >= 0 and sub_right(23) < n(31) and b == b\n",
+      "-> i = 15, palindromic_radius[i] = 8 (b#a#d#e#C#e#d#a#b)\n",
+      "sub_left(6) >= 0 and sub_right(24) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 9 (#b#a#d#e#C#e#d#a#b#)\n",
+      "sub_left(5) >= 0 and sub_right(25) < n(31) and a == a\n",
+      "-> i = 15, palindromic_radius[i] = 10 (a#b#a#d#e#C#e#d#a#b#a)\n",
+      "sub_left(4) >= 0 and sub_right(26) < n(31) and # == #\n",
+      "-> i = 15, palindromic_radius[i] = 11 (#a#b#a#d#e#C#e#d#a#b#a#)\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 16, transform_s[i] = '#'\n",
+      "(right - i) = 10, palindromic_radius[left(4)+ right(26) - i(16)] = palindromic_radius[14] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 17, transform_s[i] = 'e'\n",
+      "(right - i) = 9, palindromic_radius[left(4)+ right(26) - i(17)] = palindromic_radius[13] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 18, transform_s[i] = '#'\n",
+      "(right - i) = 8, palindromic_radius[left(4)+ right(26) - i(18)] = palindromic_radius[12] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 19, transform_s[i] = 'd'\n",
+      "(right - i) = 7, palindromic_radius[left(4)+ right(26) - i(19)] = palindromic_radius[11] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 20, transform_s[i] = '#'\n",
+      "(right - i) = 6, palindromic_radius[left(4)+ right(26) - i(20)] = palindromic_radius[10] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 21, transform_s[i] = 'a'\n",
+      "(right - i) = 5, palindromic_radius[left(4)+ right(26) - i(21)] = palindromic_radius[9] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 22, transform_s[i] = '#'\n",
+      "(right - i) = 4, palindromic_radius[left(4)+ right(26) - i(22)] = palindromic_radius[8] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 23, transform_s[i] = 'b'\n",
+      "(right - i) = 3, palindromic_radius[left(4)+ right(26) - i(23)] = palindromic_radius[7] = 7\n",
+      "palindromic_radius[i] = 3\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 24, transform_s[i] = '#'\n",
+      "(right - i) = 2, palindromic_radius[left(4)+ right(26) - i(24)] = palindromic_radius[6] = 0\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 25, transform_s[i] = 'a'\n",
+      "(right - i) = 1, palindromic_radius[left(4)+ right(26) - i(25)] = palindromic_radius[5] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 26, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 4, right = 26, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 0, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 27, transform_s[i] = 'f'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(26) >= 0 and sub_right(28) < n(31) and # == #\n",
+      "-> i = 27, palindromic_radius[i] = 1 (#f#)\n",
+      "left = 26, right = 28, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 0, 0, 0]\n",
+      "==================================================\n",
+      "i = 28, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "sub_left(27) >= 0 and sub_right(29) < n(31) and f == f\n",
+      "-> i = 28, palindromic_radius[i] = 1 (f#f)\n",
+      "sub_left(26) >= 0 and sub_right(30) < n(31) and # == #\n",
+      "-> i = 28, palindromic_radius[i] = 2 (#f#f#)\n",
+      "left = 26, right = 30, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 2, 0, 0]\n",
+      "==================================================\n",
+      "i = 29, transform_s[i] = 'f'\n",
+      "(right - i) = 1, palindromic_radius[left(26)+ right(30) - i(29)] = palindromic_radius[27] = 1\n",
+      "palindromic_radius[i] = 1\n",
+      "left = 26, right = 30, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 2, 1, 0]\n",
+      "==================================================\n",
+      "i = 30, transform_s[i] = '#'\n",
+      "palindromic_radius[i] = 0\n",
+      "left = 26, right = 30, palindromic_radius = [0, 1, 0, 1, 0, 1, 0, 7, 0, 1, 0, 1, 0, 1, 0, 11, 0, 1, 0, 1, 0, 1, 0, 3, 0, 1, 0, 1, 2, 1, 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'abadeCedaba'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"edabadeCedabaff\"\n",
+    "Solution().longestPalindrome(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 雙指針"
    ]
   },
@@ -24,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +382,7 @@
        "'bcccb'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +462,7 @@
        "'bcccb'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
